[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
  "unit: fast unit tests",
  "io: tests that operate on the file system, making use of temp files",
  "unix: test only available on unix-like systems",
  "cap: test requires elevated linux capabilities",
  "cap_mknod: test requires mknod system caps",
  "cap_chown: test requires chown system caps",
]
addopts = [
  "-m", "not cap",
]

[tool.pylint.'MESSAGE CONTROL']
enable = [
    "use-symbolic-message-instead",
]

disable = [
    "attribute-defined-outside-init",
    "duplicate-code",
    "invalid-name",
    "protected-access",
    "too-few-public-methods",
    "too-many-branches",
    "too-many-locals",
    "too-many-statements",
    "too-many-nested-blocks",
    "too-many-return-statements",
    "too-many-instance-attributes",
    "too-many-arguments",
    "consider-using-assignment-expr",
    # handled by black
    "format",
    "missing-module-docstring",
    "fixme",

    "deprecated-typing-alias",
    "consider-alternative-union-syntax",
]

[tool.pylint.MASTER]
load-plugins = [
    "pylint.extensions.check_elif",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.code_style",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.typing",
    "pylint.extensions.redefined_variable_type",
]
