[metadata]
name = tplbuild
version = attr: tplbuild._version.__version__
author = Mark Gordon
author_email = msg555@gmail.com
description = Templated container build tool
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/msg555/tplbuild/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages =
    tplbuild
    tplbuild.cmd
python_requires = >=3.8
include-package-data = True
install_requires =
    jinja2~=3.0
    pydantic~=1.0
    pyyaml~=6.0
    aioregistry~=0.7.0

[options.package_data]
tplbuild =
  py.typed
  builtin_clients.yml

[options.entry_points]
console_scripts =
  tplbuild = tplbuild.cmd.main:main
