[metadata]
name = dirdiff
version = attr: dirdiff._version.__version__
author = Mark Gordon
author_email = msg555@gmail.com
description = Directory difference CLI tool
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/msg555/dirdiff/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages =
    dirdiff
python_requires = >=3.7
include-package-data = True

[options.package_data]
dirdiff =
  py.typed

[options.entry_points]
console_scripts =
  dirdiff = dirdiff.cli:main
