[metadata]
name = uniondiff
version = attr: uniondiff._version.__version__
author = Mark Gordon
author_email = msg555@gmail.com
description = Directory difference CLI tool
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/msg555/uniondiff/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages =
    uniondiff
python_requires = >=3.8
include-package-data = True

[options.package_data]
uniondiff =
  py.typed

[options.entry_points]
console_scripts =
  uniondiff = uniondiff.cli:main
